--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,14 @@
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/assets/sass/paper-kit.scss",
                             "src/assets/css/demo.css",
-                            "src/assets/css/nucleo-icons.css"
+                            "src/assets/css/nucleo-icons.css",
+                            "node_modules/slick-carousel/slick/slick.scss",
+                            "node_modules/slick-carousel/slick/slick-theme.scss"
                         ],
-                        "scripts": [],
+                        "scripts": [
+                            "node_modules/jquery/dist/jquery.min.js",
+                            "node_modules/slick-carousel/slick/slick.min.js"
+                        ],
                         "aot": true
                     },
                     "configurations": {
